--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@
 .lists {
   display: flex;
 }
+.navlist {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+}
+.navlist--item {
+  text-decoration: none;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 0 .2em;
+}
