--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,21 @@
 .lists {
   display: flex;
 }
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .navlist {
   display: flex;
   list-style-type: none;
-  align-items: center;
+  justify-content: center;
 }
 .navlist--item {
   text-decoration: none;
   font-size: 1em;
   font-weight: bold;
   padding: 0 .2em;
+  margin: 0 .2em;
 }
