--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
   display: flex;
   justify-content: center;
 }
+.row {
+  display: flex;
+  justify-content:space-around;
+}
 .form_input{
   margin: .5em;
   max-width: 40%;
