--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 .button {
+  border: 2px solid;
+  font-weight: bold;
   padding: .5em;
 }
 .card {
@@ -19,6 +21,9 @@
 .row {
   display: flex;
   justify-content:space-around;
+}
+.row-text {
+  font-weight: bold;
 }
 .form_input{
   margin: .5em;
